--- a/src/Components/Thumbnails/Thumbnail.css
+++ b/src/Components/Thumbnails/Thumbnail.css
@@ -16,6 +16,8 @@
   padding-bottom: 8rem;
   background-color: #ffffff;
   border: 4px solid #ffffff;
+  text-decoration: none;
+  color: #000000;
 
   transition: all 0.2s;
 }
@@ -31,8 +33,30 @@
   letter-spacing: 2px;
 }
 
+.info {
+  background-color: #f5f5f5;
+  border: none;
+  padding: 1rem;
+}
+
+.info h2 {
+  font-family: "Roboto Serif", serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  font-variation-settings: "wdth" 100, "GRAD" 0;
+  text-transform: none;
+  letter-spacing: 0;
+  font-size: 1.2rem;
+}
+
+.info a {
+  color: #60935d;
+  font-size: 1.2rem;
+}
+
 /* random color change on hover */
-.thumbnail:hover {
+.project:hover {
   cursor: pointer;
   background-color: #f5f5f5;
   scale: 1.05;
@@ -46,9 +70,11 @@
   bottom: 30px;
   right: 30px;
   transition: all 0.2s;
+
+  stroke: #60935d;
 }
 
-.thumbnail:hover svg {
+.project:hover svg {
   transform: translate(20px, 20px);
   height: 3rem;
   width: 3rem;
