colors link in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* colors: https://coolors.co/60935d-a84d50-152128-eff1f3-bab700 */
+
 body {
   background-color: #f5f5f5;
   font-family: sans-serif;
