--- a/src/Components/Thumbnails/Thumbnail.css
+++ b/src/Components/Thumbnails/Thumbnail.css
@@ -33,6 +33,8 @@
   letter-spacing: 2px;
 }
 
+/* info thumbnails */
+
 .info {
   background-color: #f5f5f5;
   border: none;
@@ -55,7 +57,6 @@
   font-size: 1.2rem;
 }
 
-/* random color change on hover */
 .project:hover {
   cursor: pointer;
   background-color: #f5f5f5;
