project spacing and preference project

--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -2,6 +2,7 @@
   width: 50vw;
   padding: 1.2rem;
   margin: 0 auto;
+  margin-bottom: 15rem;
 
   font-family: "Roboto Serif", serif;
   font-optical-sizing: auto;
