--- a/src/Components/Thumbnails/Thumbnail.css
+++ b/src/Components/Thumbnails/Thumbnail.css
@@ -2,6 +2,7 @@
 .thumbnails {
   display: grid;
   margin: 0 auto;
+  margin-bottom: 10rem;
   grid-template-columns: repeat(auto-fill, minmax(25rem, 25rem));
   justify-content: center;
   grid-auto-flow: row;
